fixed alignment of points below the fold. The content dont stick to each other anymore

--- a/style.css
+++ b/style.css
@@ -160,7 +160,9 @@ body
 #shah-main-content ul li
 {
 	display: inline-block;
-	width: 25%;
+	width: 20%;
+	margin-left: 2.5%;
+	margin-right: 2.5%;
 	float: left;
 	text-align: center;
 }
@@ -179,6 +181,7 @@ body
 	font-weight: 100;
 	font-size: 14px;
 	line-height: 150%;
+	text-align: left;
 }
 
 #shah-quote
